# answerbook-api

./: .pre-commit-config.yaml  README.md  alembic.ini  cli.py  dev.Dockerfile  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
api/: __init__.py  dependencies.py  settings.py  utils.py  yaml_parser.py
api/authentication/: internal_authentication.py  jwt_utils.py  ldap_authentication.py
api/factories/: __init__.py  answer.py  assessment.py  exam.py  factory.py  mark.py  mark_feedback.py  marker.py  student.py
api/models/: answer.py  assessment.py  internal_credentials.py  mark.py  revoked_token.py  student.py
api/router/: __init__.py  answer.py  answers.py  authentication.py  candidates.py  exam.py  mark.py  mark_feedback.py  marking.py  marking_all.py  proxy.py  questions.py
api/schemas/: answer.py  exam.py  mark.py  mark_feedback.py  question.py  status.py
dev_data/: y2023_12345_exam.yaml
dev_data/y2023_12345_exam/: assessment.yaml
example_automarkers/: blank-automarker.py
migrations/: env.py
migrations/versions/: 11f1bdccc186_add_initial_schema.py  1ada632294fd_add_assessment_table.py  1dc3e7a1548a_add_students_table.py  24b9a5ade6a3_add_foreign_key_from_student_to_.py  2f240785d0e2_add_new_internal_credentials_table.py  3bf6fdce1c45_remove_server_default_value_from_mark_.py  5080d4533395_create_answer_table.py  636d35aa928b_add_default_value_to_timestamp_column_.py  71f5d28220b5_add_assessment_id_column_to_mark_table.py  742e3318cb11_add_mark_model.py  78efc3ae4af7_drop_confusing_exam_id_column_from_.py  905a24c008fc_add_index_on_exam_id_to_tables.py  a202c02e237f_add_unique_constraint_on_mark.py  a43ab9fdd90e_add_unique_constraint_to_student_.py  a6d3be52d408_add_fk_from_answer_and_mark_to_student.py  b0692e4ee910_add_unique_constraint_on_answer.py  b4ac26635c45_add_assessment_id_column_to_answer_table.py  cc42389e37d6_add_revoked_token_table.py  da898eb3951b_add_answer_history.py  e11049a10795_change_exam_id_and_ip_fields_in_answer.py  f461f0fec2a9_add_marker_table.py
scripts/: ai_automarker.py  apply_automarker.py  automark.py  automarker_types.py  automarkers.py  cli.py  get_answers.py  test_marker.py
tests/: conftest.py  test_utils.py  test_yaml_parser.py
tests/api/: test_answer.py  test_answers.py  test_authentication.py  test_candidates.py  test_exam.py  test_mark.py  test_marking.py  test_marking_all.py  test_questions.py  test_students.py
tests/test_assessments/: simple.yaml
tests/test_assessments/image_in_question_spec/: assessment.yaml
tests/test_assessments/multiple_questions/: assessment.yaml
yaml_examples/y2023_12345_exam/: assessment.yaml
(+1 files in other folders)
