[tool.poetry]
name = "answerbook-api"
version = "0.1.0"
description = ""
authors = ["Ivan Procaccini <ivanprocaccini905@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
typer = "^0.12.3"
freezegun = "^1.5.1"
pydantic-settings = "^2.3.1"
psycopg2 = "^2.9.9"
sqlmodel = "^0.0.18"
sqlalchemy-utils = "^0.41.2"
types-pyyaml = "^6.0.12.20240311"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-factoryboy = "^2.7.0"
mypy = "^1.10.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
exclude = "venv"
disable_error_code = "var-annotated"
ignore_missing_imports = true
